# haskell-llvm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HaskellNode.hpp  Makefile  README  cmake_install.cmake  main.cpp
.devcontainer/: Dockerfile
programs/: double.hs  factorial.hs  hello-world.hs
